# VTB

./: .gitattributes  CMakeLists.txt  LICENSE.txt  README.md
cmd/: CMakeLists.txt
cmd/vtb-node/: CMakeLists.txt  main.c
config/: CMakeLists.txt  config.c
core/: CMakeLists.txt  transaction.c  vtb.c
include/: action.h  config.h  database.h  list.h  log.h  mutex.h  net.h  rpc.h  spinlock.h  thread.h  transaction.h  types.h  utils.h  vtb.h
lib/: CMakeLists.txt  thread.c
log/: CMakeLists.txt  log.c
net/: CMakeLists.txt  net.c  node_table.c  udp.c
net/include/: common.h  connection.h  discover.h  host.h  message.h  node_table.h  session.h  socket_inc.h  udp.h
rpc/: CMakeLists.txt  rpc.c
storage/: database.c
